# competitive-programming

./: .gitignore  CMakeLists.txt  README.md
cmake/: AutoRegisterExecutables.cmake  TestRunner.cmake
contests/: CMakeLists.txt
contests/codeforces/good_bye_2025/: CMakeLists.txt  task_a.cpp  task_b.cpp
contests/codeforces/good_bye_2025/test_data/: task_a.txt  task_b.txt
contests/codeforces/round_1071_div_3/: CMakeLists.txt  task_a.cpp  task_b.cpp  task_c.cpp  task_d.cpp  task_e.cpp
contests/codeforces_found_1071_div_3/: CMakeLists.txt
contests/good_bye_2025/: CMakeLists.txt
practice/: 2180_c.cpp  CMakeLists.txt
practice/codeforces/: 2180_c.cpp  2193_e.cpp  2217_a.cpp  CMakeLists.txt
practice/codeforces/test_data/: 2193_e.txt
practice/timus/: 1000_a_plus_b.cpp  1001_reverse_root.cpp  1068_sum.cpp  1100_final_standings.cpp  1197_lonesome_knight.cpp  1209_1_10_100_1000.cpp  1225_flags.cpp  1263_elections.cpp  1264_workdays.cpp  1293_eniya.cpp  1313_some_words_about_sport.cpp  1319_hotel.cpp  1409_two_gangsters.cpp  1567_sms_spam.cpp  1581_teamwork.cpp  1585_penguins.cpp  1607_taxi.cpp  1639_chocolate_2.cpp  1785_lost_in_localization.cpp  1787_turn_for_mega.cpp  1820_ural_steaks.cpp  1877_bicycle_codes.cpp  1880_psych_up_s_eigenvalues.cpp  1910_titan_ruins_hidden_entrance.cpp  1924_four_imps.cpp  2001_mathematicians_and_berries.cpp  2012_about_grisha_n.cpp  2023_donald_is_a_postman.cpp  2056_scholarship.cpp  2066_simple_expression.cpp  2100_wedding_dinner.cpp  CMakeLists.txt
practice/timus/test_data/: 1000_a_plus_b.txt  1607_taxi.txt
templates/: CMakeLists.txt  n_test_cases_template.cpp
utils/: test_runner.h
