cmake_minimum_required(VERSION 3.10)

project(TimusPractice LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${PROJECT_NAME}1001_Reverse_Root 1001_reverse_root.cpp)

add_executable(${PROJECT_NAME}1000_A_Plus_B 1000_a_plus_b.cpp)

add_executable(${PROJECT_NAME}1293_Eniya 1293_eniya.cpp)