cmake_minimum_required(VERSION 3.10)

project(TimusPractice LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${PROJECT_NAME}1001_Reverse_Root 1001_reverse_root.cpp)

add_executable(${PROJECT_NAME}1000_A_Plus_B 1000_a_plus_b.cpp)

add_executable(${PROJECT_NAME}1293_Eniya 1293_eniya.cpp)

add_executable(${PROJECT_NAME}1409_Two_Gangsters 1409_two_gangsters.cpp)

add_executable(${PROJECT_NAME}1785_Lost_In_Localization 1785_lost_in_localization.cpp)

add_executable(${PROJECT_NAME}2012_About_Grisha_N 2012_about_grisha_n.cpp)

add_executable(${PROJECT_NAME}1877_Bicycle_Codes 1877_bicycle_codes.cpp)

add_executable(${PROJECT_NAME}1264_Workdays 1264_workdays.cpp)

add_executable(${PROJECT_NAME}2001_Mathematicians_and_Berries 2001_mathematicians_and_berries.cpp)

add_executable(${PROJECT_NAME}1787_Turn_For_MEGA 1787_turn_for_mega.cpp)
